[package]
name = "bevy_121"
version = "0.1.1"
authors = ["Josh Hyatt <joshua.n.hyatt@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "One-to-one relationships for Bevy ECS"
repository = "https://github.com/jnhyatt/bevy_121"
keywords = ["bevy", "ecs", "relationships", "relations"]
readme = "../../README.md"

[dependencies]
bevy_121_macros = { version = "0.1.1", path = "../bevy_121_macros" }
bevy_ecs = { version = "0.16", default-features = false }
